--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-   "deploy": "npm run build && gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +32,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "2.1.1"
+    "gh-pages": "^2.1.1"
   }
 }
